update to java 9 - exception & code cleanup